--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -93,9 +93,9 @@
               <%= image_tag 'clingen-doc-logo.png', width: "438", height: "108", alt: "ClinGen Documentation", class: "img-responsive" %>
             </li>
             <%= discussion_link_with_local_index "Discussion" %>
-            <%= link_with_local_index "Implementation", "/#{current_page.data.model}/implementation/index.html" %>
-            <%= link_with_local_index "Resource", "/#{current_page.data.model}/resource/index.html" %>
-            <%= link_with_local_index "Conceptual", "/#{current_page.data.model}/conceptual/index.html" %>
+            <%= link_with_local_index "Activities", "vampi/activities/index.html" %>
+            <%= link_with_local_index "Entities", "/#{current_page.data.model}/vampi/entities/index.html" %>
+            <%= link_with_local_index "Agents", "/#{current_page.data.model}/vampi/agents/index.html" %>
           </ul>
         </div>
         <div class="col-sm-8 col-sm-offset-4 col-md-9 col-md-offset-3 main">
