--- a/source/layouts/activity.erb
+++ b/source/layouts/activity.erb
@@ -1,6 +1,6 @@
 <% wrap_layout :layout  do %>
     
-    <%- entity = data.google.Entity[current_page.data.id] %>
+    <%- entity = data.flattened.Entity[current_page.data.id] %>
 
     <!-- this is primarily the Scope and Usage section -->
     <%= yield %>
