--- a/source/layouts/entity.erb
+++ b/source/layouts/entity.erb
@@ -1,7 +1,5 @@
 <% wrap_layout :layout  do %>
     
-    
-
 
     <!-- this is primarily the Scope and Usage section -->
     <%= yield %>
@@ -31,6 +29,34 @@
             </tbody>
         </table>
 
+    <h2>Inherited Attributes</h2>
+
+        <table class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <thead>
+            <tr>
+                <th>Name</th>
+                <th>Type</th>
+                <th>Cardinality</th>
+                <th>Inherited From</th>
+                <th>Description</th>
+            </tr>
+            </thead>
+            <tbody>
+            <% parentid = data.flattened.Entity[current_page.data.id].parentEntityTypeId %>
+            <% while parentid != nil %>
+                <% attributes_by_entity(parentid).each do |a| %>
+                <tr>
+                    <td><%= a.name %></td>
+                    <td><%= a.dataType %></td>
+                    <td><%= a.cardinality %></td>
+                    <td><%= data.flattened.Entity[parentid].name %></td>
+                    <td><%= a.description %></td>
+                </tr>
+                <% end %>
+                <% parentid = data.flattened.Entity[parentid].parentEntityTypeId %>
+            <% end %>
+            </tbody>
+        </table>
 
     <h2>Examples</h2>
 
