--- a/source/layouts/agent.erb
+++ b/source/layouts/agent.erb
@@ -1,6 +1,6 @@
 <% wrap_layout :layout  do %>
     
-    <%- entity = data.flattened.Entity[current_page.data.id] %>
+    <%- entity = data.flattened.Type[current_page.data.id] %>
 
     <h1><%= entity.name %></h1>
     <%= entity.description %>
