--- a/source/layouts/entity.erb
+++ b/source/layouts/entity.erb
@@ -42,18 +42,18 @@
             </tr>
             </thead>
             <tbody>
-            <% parentid = data.flattened.Entity[current_page.data.id].parentEntityTypeId %>
+            <% parentid = data.flattened.Type[current_page.data.id].parentType %>
             <% while parentid != nil %>
                 <% attributes_by_entity(parentid).each do |a| %>
                 <tr>
                     <td><%= a.name %></td>
                     <td><%= a.dataType %></td>
                     <td><%= a.cardinality %></td>
-                    <td><%= data.flattened.Entity[parentid].name %></td>
+                    <td><%= data.flattened.Type[parentid].name %></td>
                     <td><%= a.description %></td>
                 </tr>
                 <% end %>
-                <% parentid = data.flattened.Entity[parentid].parentEntityTypeId %>
+                <% parentid = data.flattened.Type[parentid].parentType %>
             <% end %>
             </tbody>
         </table>
