--- a/source/layouts/model.erb
+++ b/source/layouts/model.erb
@@ -1,5 +1,5 @@
 <% wrap_layout :layout  do %>
 
-    <%- entity = data.flattened.Entity[current_page.data.id] %>
+    <%- entity = data.flattened.Type[current_page.data.id] %>
 
 <% end %>
