show json examples for entities

--- a/source/layouts/entity.erb
+++ b/source/layouts/entity.erb
@@ -1,5 +1,5 @@
 <% wrap_layout :layout  do %>
-    
+
 
     <!-- this is primarily the Scope and Usage section -->
     <%= yield %>
@@ -59,6 +59,12 @@
         </table>
 
     <h2>Examples</h2>
-
+    <div id="example_view"></div>
+    <script>
+        run_on_load = function () {return $("#example_view").JSONView(
+          <%= Hash[(examples_by_type(current_page.data.id) || []).map {|ex| [ex['cg:id'], ex]}].to_json %>,
+          { collapsed: true }
+        )}
+    </script>
 
 <% end %>
