also show examples for activities and agents
There's probably a better way to do this without using run-run_on_load
and without duplicating the code in activity.erb, agent.erb,
entity.erb...

--- a/source/layouts/agent.erb
+++ b/source/layouts/agent.erb
@@ -1,5 +1,5 @@
 <% wrap_layout :layout  do %>
-    
+
     <%- entity = data.flattened.Type[current_page.data.id] %>
 
     <h1><%= entity.name %></h1>
@@ -11,7 +11,7 @@
     <%= yield %>
 
     <!-- image here if available -->
-  
+
 
     <h2>Attributes</h2>
 
@@ -38,6 +38,13 @@
 
 
     <h2>Examples</h2>
+    <div id="example_view"></div>
+    <script>
+        run_on_load = function () {return $("#example_view").JSONView(
+          <%= Hash[(examples_by_type(current_page.data.id) || []).map {|ex| [ex['cg:id'], ex]}].to_json %>,
+          { collapsed: true }
+        )}
+    </script>
 
 
 <% end %>
