--- a/source/layouts/activity.erb
+++ b/source/layouts/activity.erb
@@ -1,5 +1,5 @@
 <% wrap_layout :layout  do %>
-    
+
     <%- entity = data.flattened.Type[current_page.data.id] %>
 
     <!-- this is primarily the Scope and Usage section -->
@@ -62,6 +62,13 @@
 
 
     <h2>Examples</h2>
+    <div id="example_view"></div>
+    <script>
+        run_on_load = function () {return $("#example_view").JSONView(
+          <%= Hash[(examples_by_type(current_page.data.id) || []).map {|ex| [ex['cg:id'], ex]}].to_json %>,
+          { collapsed: true }
+        )}
+    </script>
 
 
 <% end %>
