Fixing model_link, list_siblings

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -47,7 +47,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-left">
             <li>
-              <%= link_to 'About', '/' %>
+              <%= link_to 'Home', '/' %>
             </li>
             <li>
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" >
