--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -135,7 +135,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <%= javascript_include_tag 'jquery', 'bootstrap', 'jquery.jsonview', 'run-run_on_load' %>
+    <%= javascript_include_tag 'jquery', 'bootstrap', 'jquery.jsonview' %>
     <% (current_page.data.append_js || []).each do |jsfile| %>
       <%= javascript_include_tag jsfile %>
     <% end %>
