--- a/source/layouts/entity.erb
+++ b/source/layouts/entity.erb
@@ -59,26 +59,49 @@
         </table>
 
     <h2>Examples</h2>
-    <div id="example_view"></div>
+    <table class="table table-striped table-bordered" cellspacing=0 width="100%">
+      <thead><tr>
+        <th>ID</th>
+        <th>description</th>
+        <th>json</th>
+        <th>diagram</th>
+      </tr></thead>
+      <tbody>
+      <% (examples_by_type(current_page.data.id) || []).each do |ex| %>
+        <tr>
+          <td><%= ex['cg:id'] %></td>
+          <td><%= ex['description'] || ex['desc'] || ex['shortDescription'] || ex['name'] || ex['explanation'] || ex['alleleName'] %></td>
+          <td><div class="example_view" id="<%= ex['cg:id'] %>"></div></td>
+          <td><a href="../../examples/diagram.html#<%= ex['cg:id'] %>">diagram</a></td>
+        </tr>
+
+      <% end %>
+      </tbody>
+    </table>
     <script>
 window.addEventListener('load', function () {
-    var view = $("#example_view").JSONView(
-          <%= Hash[(examples_by_type(current_page.data.id) || []).map {|ex| [ex['cg:id'], ex]}].to_json %>,
-          { collapsed: true }
-    )
+    $('.example_view').each(function () {
+        var $view = $(this);
+        $.getJSON('../../../json/' + $view.attr('id') + '.json', function (data) {
+            $view.JSONView(data, { collapsed: true })
+        })
+    })
 
-    var fix_ellipses = function () {
-        $('#example_view ul.obj li a:contains("cg:id")').parent().parent().parent().children('.ellipsis').each(function () {
+    var fix_ellipses = function (event) {
+        $('.example_view ul.obj li a:contains("cg:id")').parent().parent().parent().children('.ellipsis').each(function () {
             $(this).html('<em>' + $(this).next('ul').find('a:contains("cg:id")').next('.string')[0].innerText + ', …</em>')
         })
 
-        $('#example_view ul.array').each(function () {
+        $('.example_view ul.array').each(function () {
             $(this).parent().children('.ellipsis').html('<em>… [' + $(this).children('li').size() + ']</em>')
         })
     }
+
+    /*
     fix_ellipses()
-    $('#example_view .collapser').click(fix_ellipses)
-    $('#example_view .collapser').next('a.prop').click(fix_ellipses)
+    $('.example_view .collapser').click(fix_ellipses)
+    $('.example_view .collapser').next('a.prop').click(fix_ellipses)
+    */
 })
     </script>
 
