--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -92,9 +92,10 @@
         <div class="col-sm-4 col-md-3 sidebar">
           <ul class="nav nav-sidebar">
             <li class='nav-sidebar-title'>
-              <%= image_tag 'clingen-doc-logo.png', width: "438", height: "108", alt: "ClinGen Documentation", class: "img-responsive" %>
-            </li>
-
+          	<% link_to "https://clinicalgenome.org" do %>
+            	<%= image_tag 'clingen-doc-logo.png', width: "438", height: "108", alt: "ClinGen Documentation", class: "img-responsive" %>
+          	<% end %>
+        	</li>
             <li class="active">
               <%= link_to "Welcome", "/index.html", :relative => true %>
             </li>
