Title size update

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -92,9 +92,9 @@
         <div class="col-sm-4 col-md-3 sidebar">
           <ul class="nav nav-sidebar">
             <li class='nav-sidebar-title'>
-          	<% link_to "https://clinicalgenome.org" do %>
-            	<%= image_tag 'clingen-doc-logo.png', width: "438", height: "108", alt: "ClinGen Documentation", class: "img-responsive" %>
-          	<% end %>
+          		<% link_to "https://clinicalgenome.org" do %>
+            		<%= image_tag 'clingen-doc-logo.png', width: "100%", height: "100%", alt: "ClinGen Documentation", class: "img-responsive" %>
+          		<% end %>
         	</li>
             <li class="active">
               <%= link_to "Welcome", "/index.html", :relative => true %>
