--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -96,9 +96,10 @@
           		<% end %>
   	  	 	</div>
           	<ul class="nav nav-sidebar">
-	            <li class="active">
+	            <!-- <li class="active">
 	              <%= link_to "Welcome", "/index.html", :relative => true %>
-	            </li>
+	            </li>-->
+	            <%= link_with_local_index "Welcome", "/index.html" %>
 	            <%= link_with_local_index "User Guide", "user/index.html" %>
 	            <%= link_with_local_index "Technical Reference", "tech/index.html" %>
 	            <!-- Old style.  We might still need the model here? -->
