--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -96,7 +96,7 @@
           		<% end %>
   	  	 	</div>
           	<ul class="nav nav-sidebar">
-	            <li>
+	            <li class="active">
 	              <%= link_to "Welcome", "/index.html", :relative => true %>
 	            </li>
 	            
