--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -96,7 +96,7 @@
           		<% end %>
   	  	 	</div>
           	<ul class="nav nav-sidebar">
-	            <%= link_with_local_index "Welcome", "/index.html" %>	            
+	            <%= link_with_local_index "Welcome", "master/index.html" %>	            
 	            <%= link_with_local_index "User Guide", "user/index.html" %>
 	            <%= link_with_local_index "Technical Reference", "tech/index.html" %>
 	            <!-- Old style.  We might still need the model here? -->
