Updating Tech Docs

--- a/source/layouts/entity.erb
+++ b/source/layouts/entity.erb
@@ -21,6 +21,7 @@
                 <th>Type</th>
                 <th>Cardinality</th>
                 <th>Description</th>
+                <th>IRI</th>
             </tr>
             </thead>
             <tbody>
@@ -30,6 +31,7 @@
                 <td><%= a['dataType'] %></td>
                 <td><%= a['cardinality'] %></td>
                 <td><%= a['description'] %></td>
+                <td><%= a['iri'] %></td>
             </tr>
         <% end %>
             </tbody>
@@ -49,6 +51,7 @@
                 <th>Cardinality</th>
                 <th>Inherited From</th>
                 <th>Description</th>
+                <th>IRI</th>
             </tr>
             </thead>
             <tbody>
@@ -59,6 +62,7 @@
                     <td><%= a['cardinality'] %></td>
                     <td><%= a['inherited_from'] %></td>
                     <td><%= a['description'] %></td>
+                    <td><%= a['iri'] %></td>
                 </tr>
                 <% end %>
             </tbody>
